welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime1.DwarfCode
  if (getDirection()==direction.OUEST){
                      ^